--- a/index.login.html
+++ b/index.login.html
@@ -13,7 +13,12 @@
 
         <h1>Authpack Sample</h1>
         <button data-authpack="open">スタートボタン</button>
-
+        
+        <h1
+        data-authpack="show"
+        data-value="user"
+        data-trigger="present">こんにちは！
+        </h1>
     
     </body>
 
