--- a/index.oubo.html
+++ b/index.oubo.html
@@ -10,6 +10,13 @@
 
     <p>ご応募いただくと抽選で
       <br>100名様にAmazonギフト券をプレゼント致します。<br>お客様の情報をご記載下さい。</p>
+    <h1 こんにちは、
+    <span
+        data-authpack="replace"
+        data-value="user.name">
+    </span>
+    さん
+</h1>
       <!DOCTYPE html>
       <head>
       <title>会員登録画面</title>
