--- a/index.oubo.html
+++ b/index.oubo.html
@@ -3,6 +3,11 @@
     <meta charset="UTF-8">
     <title>応募</title>
     <link rel="stylesheet" href="touroku.css">
+    <script 
+        src="https://scripts.v1.authpack.io/index.js" data-key="wga-client-key-7c7b0fa5362dd04c3ce8f6c00">
+        </script>
+
+    
 </head>
 <body>
 <p class="border01">　　　抽選応募</p>
