--- a/index.oubo.html
+++ b/index.oubo.html
@@ -44,6 +44,7 @@
       <p>　生年月日</p>
       　<input type="date" name="calendar" max="9999-12-31" id="birth">
       </form>
+<button data-authpack="open">Login</button>
       <div class="item no-label"><br>
         <a style="text-align: center;"><input type="submit">
         </a>
