--- a/index.login.html
+++ b/index.login.html
@@ -19,6 +19,14 @@
         data-value="user"
         data-trigger="present">こんにちは！
         </h1>
+        <h1 こんにちは、
+            <span
+                data-authpack="replace"
+                data-value="user.name">
+            </span>
+            さん
+        </h1>
+
     
     </body>
 
